Line of garbage pixels at the bottom of an feTurbulence sometimes https://bugs.webkit.org/show_bug.cgi?id=179866

Reviewed by Wenson Hsieh.
Source/WebCore:

The ParallelJobs logic was broken in that the sum of the computed job
heights was one too short sometimes. Fix and clean up the logic.

Test: svg/filters/feTurbulence-parallel-jobs.html

* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::platformApplySoftware):

LayoutTests:

* svg/filters/feTurbulence-parallel-jobs-expected.html: Added.
* svg/filters/feTurbulence-parallel-jobs.html: Added.


Canonical link: https://commits.webkit.org/195893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225024 268f45cc-cd09-0410-ab3c-d52691b4dbfc